--- a/public/detallesPagos.html
+++ b/public/detallesPagos.html
@@ -11,7 +11,7 @@
     <div class="header">
         <div class="header-left">
             <img src="images/Persona.jpg" alt="Verificado" class="verified-icon">
-            <li class="nombreUsuario" id="nombreUsuario">(nombre de usuario)</li>
+            <li class="nombreUsuario" id="nombreUsuario"></li>
         </div>
         <div class="header-center">
             <h1>HOTEL GABARRA</h1>
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="header-right">
-            <button class="volverBtn" onclick="window.location.href='sesionIniciada.html';">VOLVER</button>
+            <button class="volverBtn" onclick="redirectUser()">VOLVER</button>
         </div>
     </div>
 
@@ -32,4 +32,3 @@
     <script src="js/detallesPagos.js"></script>
 </body>
 </html>
-
