--- a/public/filtroBusqueda.html
+++ b/public/filtroBusqueda.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="header-right">
-            <button class="volverBtn">VOLVER</button>
+            <button class="volverBtn" onclick="redirectUser()">VOLVER</button>
         </div>
     </div>
 
@@ -58,7 +58,7 @@
         <div class="modal-content">
             <button class="close-btn">&times;</button>
             <h2>Confirmar Pago</h2>
-            <img src="tu_imagen.png" alt="Imagen del Modal" class="modal-image">
+            <img src="images/buffet.jpeg" alt="Imagen del Modal" class="modal-image">
             <div class="modal-body">
                 <p id="modal-date"></p>
                 <div id="modal-habitaciones"></div>
