--- a/public/habitaciones.html
+++ b/public/habitaciones.html
@@ -12,7 +12,7 @@
     <div class="header">
         <div class="header-left">
             <img src="images/Persona.jpg" alt="Verificado" class="verified-icon">
-            <span class="username">ADMIN</span>
+            <li class="nombreUsuario" id="nombreUsuario"></li>
         </div>
         <div class="header-center">
             <h1>HOTEL GABARRA</h1>
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="header-right">
-            <button class="volverBtn" onclick="window.location.href='iniAdmin.html';">VOLVER</button>
+            <button class="volverBtn" onclick="redirectUser()">VOLVER</button>
         </div>
     </div>
 
