--- a/public/sesionIniciada.html
+++ b/public/sesionIniciada.html
@@ -15,9 +15,9 @@
                 <ul id="menulist">
                     <li class="image-square"></li>
                     <li class="nombreUsuario" id="nombreUsuario"></li>
-                    <li><a href="filtroBusqueda.html">Reservas</a></li>
-                    <li><a href="detallesPagos.html">Detalles de reservas</a></li>
-                    <li><a href="soporte.html">Soporte</a></li>
+                    <li><a href="filtroBusqueda.html" onclick="saveCurrentPage()">Reservas</a></li>
+                    <li><a href="detallesPagos.html" onclick="saveCurrentPage()">Detalles de reservas</a></li>
+                    <li><a href="soporte.html" onclick="saveCurrentPage()">Soporte</a></li>
                     <li><button class="volverBtn" onclick="logout()">SALIR</button></li>
                 </ul>
                 <span class="fa fa-bars" onclick="menutoggle()"></span>
