--- a/public/verReservas.html
+++ b/public/verReservas.html
@@ -10,7 +10,7 @@
     <div class="header">
         <div class="header-left">
             <img src="images/Persona.jpg" alt="Verificado" class="verified-icon">
-            <span class="username">ADMIN</span>
+            <li class="nombreUsuario" id="nombreUsuario"></li>
         </div>
         <div class="header-center">
             <h1>HOTEL GABARRA</h1>
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="header-right">
-            <button class="volverBtn" onclick="window.location.href='iniAdmin.html';">VOLVER</button>
+            <button class="volverBtn" onclick="redirectUser()">VOLVER</button>
         </div>
     </div>
 
@@ -33,12 +33,14 @@
                 <th>Número de Habitaciones</th>
                 <th>Fecha inicial</th>
                 <th>Fecha final</th>
+                <th>Acciones</th>
             </tr>
         </thead>
         <tbody id="reservasBody">
-            <!-- Las reservas se añadirán aquí dinámicamente -->
+            
         </tbody>
     </table>
+    
 
     <script src="js/verReservas.js"></script>
 </body>
