--- a/public/registroSesion.html
+++ b/public/registroSesion.html
@@ -32,6 +32,7 @@
                 <button type="button" onclick="window.location.href='index.html';">VOLVER</button>
             </form>
         </div>
+
         <br>
         <br>
         <div class="form-wrapper sign-up">
@@ -69,10 +70,51 @@
             </form>
         </div>
     </div>
-</body>
 
+    <!-- Modal HTML -->
+    <div class="modal fade" id="errorModal" tabindex="-1" aria-labelledby="errorModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="errorModalLabel">Error de Autenticación</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="errorMessage">
+                    <!-- El mensaje de error se insertará aquí -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script>
 
+$(document).ready(function() {
+    const urlParams = new URLSearchParams(window.location.search);
+    if (urlParams.has('error')) {
+        let errorMessage = '';
+        switch(urlParams.get('error')) {
+            case 'auth':
+                errorMessage = 'Credenciales incorrectas. Por favor, intente de nuevo.';
+                break;
+            case 'missing_credentials':
+                errorMessage = 'Correo y contraseña son requeridos.';
+                break;
+            case 'server':
+                errorMessage = 'Error interno del servidor. Por favor, intente más tarde.';
+                break;
+            default:
+                errorMessage = 'Error desconocido.';
+        }
+
+        $('#errorMessage').text(errorMessage);
+        $('#errorModal').modal('show');
+    }
+});
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
 </body>
-
 </html>
