--- a/public/soporte.html
+++ b/public/soporte.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="header-right">
-            <button class="volverBtn" onclick="window.location.href='sesionIniciada.html';">VOLVER</button>
+            <button class="volverBtn" onclick="redirectUser()">VOLVER</button>
         </div>
     </div>
 
@@ -77,7 +77,19 @@
         console.error('Error al obtener datos del usuario:', error);
         document.getElementById('nombreUsuario').textContent = 'Invitado';
     });
-      
+
+
+    function redirectUser() {
+    // Obtener el ID del usuario de la sesión
+    const userId = req.session.usuario ? req.session.usuario.id : null;
+
+    // Verificar el ID del usuario y redirigirlo en consecuencia
+    if (userId === 0) {
+        window.location.href = '/iniAdmin.html';
+    } else {
+        window.location.href = '/sesionIniciada.html';
+    }
+}
           </script>
 
 </body>
