--- a/public/pagos.html
+++ b/public/pagos.html
@@ -44,7 +44,58 @@
 
     <script>
         // Obtener datos del usuario
-        fetch('http://127.0.0.1:3000/user-data')
+        fetch('http://127.0.0.1:3000/user-data', {
+            credentials: 'include'
+        })
+        .then(response => {
+            if (!response.ok) {
+                throw new Error('Network response was not ok');
+            }
+            return response.json();
+        })
+        .then(data => {
+            if (data.nombreCompleto) {
+                document.getElementById('nombreUsuario').textContent = data.nombreCompleto;
+            } else {
+                document.getElementById('nombreUsuario').textContent = 'Invitado';
+            }
+        })
+        .catch(error => {
+            console.error('Error al obtener datos del usuario:', error);
+            document.getElementById('nombreUsuario').textContent = 'Invitado';
+        });
+
+        // Obtener datos de pagos
+        fetch('http://127.0.0.1:3000/pagosadmin', {
+            credentials: 'include'
+        })
+        .then(response => {
+            if (!response.ok) {
+                throw new Error('Network response was not ok');
+            }
+            return response.json();
+        })
+        .then(pagos => {
+            console.log(pagos);  // Agrega esto para verificar los datos recibidos
+            const pagosBody = document.getElementById('pagosBody');
+            pagos.forEach(pago => {
+                const row = document.createElement('tr');
+                row.innerHTML = `
+                    <td>${pago.idPago}</td>
+                    <td>${pago.idReserva}</td>
+                    <td>${pago.valorPago}</td>
+                    <td>${new Date(pago.fechaPago).toLocaleDateString()}</td>
+                    <td>${pago.estado}</td>
+                `;
+                pagosBody.appendChild(row);
+            });
+        })
+        .catch(error => console.error('Error al obtener pagos:', error));
+
+        function redirectUser() {
+            fetch('http://127.0.0.1:3000/user-data', {
+                credentials: 'include'
+            })
             .then(response => {
                 if (!response.ok) {
                     throw new Error('Network response was not ok');
@@ -52,67 +103,22 @@
                 return response.json();
             })
             .then(data => {
-                if (data.nombreCompleto) {
-                    document.getElementById('nombreUsuario').textContent = data.nombreCompleto;
+                if (data.id !== undefined) {
+                    const userId = data.id;
+
+                    if (userId === 0) {
+                        window.location.href = '/iniAdmin.html';
+                    } else {
+                        window.location.href = '/sesionIniciada.html';
+                    }
                 } else {
-                    document.getElementById('nombreUsuario').textContent = 'Invitado';
+                    console.error('No se pudo obtener el ID del usuario');
                 }
             })
             .catch(error => {
                 console.error('Error al obtener datos del usuario:', error);
-                document.getElementById('nombreUsuario').textContent = 'Invitado';
             });
-
-        // Obtener datos de pagos
-        fetch('http://127.0.0.1:3000/pagos')
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                return response.json();
-            })
-            .then(pagos => {
-                console.log(pagos);  // Agrega esto para verificar los datos recibidos
-                const pagosBody = document.getElementById('pagosBody');
-                pagos.forEach(pago => {
-                    const row = document.createElement('tr');
-                    row.innerHTML = `
-                <td>${pago.idPago}</td>
-                <td>${pago.idReservas}</td>
-                <td>${pago.valorPago}</td>
-                <td>${new Date(pago.fechaPago).toLocaleDateString()}</td>
-            `;
-                    pagosBody.appendChild(row);
-                });
-            })
-            .catch(error => console.error('Error al obtener pagos:', error));
-
-            function redirectUser() {
-    fetch('http://127.0.0.1:3000/user-data')
-    .then(response => {
-        if (!response.ok) {
-            throw new Error('Network response was not ok');
         }
-        return response.json();
-    })
-    .then(data => {
-        if (data.id !== undefined) {
-            const userId = data.id;
-
-            if (userId === 0) {
-                window.location.href = '/iniAdmin.html';
-            } else {
-                window.location.href = '/sesionIniciada.html';
-            }
-        } else {
-            console.error('No se pudo obtener el ID del usuario');
-        }
-    })
-    .catch(error => {
-        console.error('Error al obtener datos del usuario:', error);
-    });
-}
-          
     </script>
 </body>
 
