--- a/public/registroSesion.html
+++ b/public/registroSesion.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
@@ -25,19 +25,20 @@
                 <div class="remember">
                     <label><input type="checkbox"> Recordar</label>
                 </div>
+               
                 <button type="submit">ACCEDER</button>
                 <div class="signUp-link">
                     <p>¿No tienes cuenta? <a href="#" class="signUpBtn-link">Regístrate.</a></p>
                 </div>
                 <button type="button" onclick="window.location.href='index.html';">VOLVER</button>
             </form>
-        </div>
-
-        <br>
-        <br>
+             <!-- Contenedor para el mensaje de error -->
+             <div id="error-message" style="color: red; display: none;"></div>
+            </div>
+<div>.</div>
+        <br><br>
         <div class="form-wrapper sign-up">
             <form action="http://127.0.0.1:3000/register" method="POST">
-                <h2> . </h2>
                 <h2>CREAR CUENTA</h2>
                 <div class="input-group">
                     <input type="text" name="nombreCompleto" required>
@@ -71,50 +72,32 @@
         </div>
     </div>
 
-    <!-- Modal HTML -->
-    <div class="modal fade" id="errorModal" tabindex="-1" aria-labelledby="errorModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="errorModalLabel">Error de Autenticación</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body" id="errorMessage">
-                    <!-- El mensaje de error se insertará aquí -->
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script>
-
-$(document).ready(function() {
-    const urlParams = new URLSearchParams(window.location.search);
-    if (urlParams.has('error')) {
-        let errorMessage = '';
-        switch(urlParams.get('error')) {
-            case 'auth':
-                errorMessage = 'Credenciales incorrectas. Por favor, intente de nuevo.';
-                break;
-            case 'missing_credentials':
-                errorMessage = 'Correo y contraseña son requeridos.';
-                break;
-            case 'server':
-                errorMessage = 'Error interno del servidor. Por favor, intente más tarde.';
-                break;
-            default:
-                errorMessage = 'Error desconocido.';
-        }
-
-        $('#errorMessage').text(errorMessage);
-        $('#errorModal').modal('show');
-    }
-});
-    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
+    <script>
+        // Leer el mensaje de error de la URL
+        const params = new URLSearchParams(window.location.search);
+        const error = params.get('error');
+
+        if (error) {
+            const errorMessageElement = document.getElementById('error-message');
+            switch (error) {
+                case 'missing_credentials':
+                    errorMessageElement.textContent = 'Por favor, ingresa tu correo y contraseña.';
+                    break;
+                case 'auth':
+                    errorMessageElement.textContent = 'Correo o contraseña incorrectos.';
+                    break;
+                case 'server':
+                    errorMessageElement.textContent = 'Error interno del servidor. Inténtalo de nuevo más tarde.';
+                    break;
+                default:
+                    errorMessageElement.textContent = 'Error desconocido. Inténtalo de nuevo.';
+            }
+            errorMessageElement.style.display = 'block';
+        }
+    </script>
 </body>
+
 </html>
