--- a/public/verReservas.html
+++ b/public/verReservas.html
@@ -37,10 +37,9 @@
             </tr>
         </thead>
         <tbody id="reservasBody">
-            
+            <!-- Aquí se cargarán las reservas -->
         </tbody>
     </table>
-    
 
     <script src="js/verReservas.js"></script>
 </body>
